// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormattingUtils formatList should return expected sentence in ReactNode when given 2 React children 1`] = `
<React.Fragment>
  <React.Fragment>
    <span>
      a
    </span>
  </React.Fragment>
  <React.Fragment>
     and 
  </React.Fragment>
  <React.Fragment>
    <span>
      b
    </span>
  </React.Fragment>
</React.Fragment>
`;

exports[`FormattingUtils formatList should return expected sentence in ReactNode when given more React children 1`] = `
<React.Fragment>
  <React.Fragment>
    <span>
      a
    </span>
  </React.Fragment>
  <React.Fragment>
    , 
  </React.Fragment>
  <React.Fragment>
    <span>
      b
    </span>
  </React.Fragment>
  <React.Fragment>
    , 
  </React.Fragment>
  <React.Fragment>
    <span>
      c
    </span>
  </React.Fragment>
  <React.Fragment>
     and 
  </React.Fragment>
  <React.Fragment>
    <span>
      d
    </span>
  </React.Fragment>
</React.Fragment>
`;

exports[`FormattingUtils formatList should return expected sentence in ReactNode when using itemLimit 1`] = `
<span>
  <React.Fragment>
    <React.Fragment>
      <span>
        a
      </span>
      , 
    </React.Fragment>
    <React.Fragment>
      <span>
        b
      </span>
    </React.Fragment>
  </React.Fragment>
   and 2 others
</span>
`;
